# Robotics-II-Intelligent-Robotic-Systems

./: README.md
Project1/: CMakeLists.txt  package.xml
Project1/archive/: kinematics.py  main.py
Project1/launch/: redundant.launch
Project1/scripts/: controller.py  kinematics.py
Project2A/robo2_mobile/: CMakeLists.txt  package.xml
Project2A/robo2_mobile/launch/: follower.launch
Project2A/robo2_mobile/scripts/: follower.py
